2003-05-11  Mark Kettenis  <kettenis@gnu.org>

	* value.h: Pretty print.

2003-05-10  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/tm-linux.h (I386_GNULINUX_TARGET): Remove define.

2003-05-08  Andrew Cagney  <cagney@redhat.com>

	* regcache.h (max_register_size): Delete declaration.
	* regcache.c (max_register_size): Delete function.
	(struct regcache_descr): Delete field "max_register_size".
	(init_regcache_descr, init_legacy_regcache_descr): Assert that all
	registers fit in MAX_REGISTER_SIZE.
	(regcache_save): Replace max_register_size with MAX_REGISTER_SIZE.
	(regcache_restore, regcache_xfer_part, regcache_dump): Ditto.
	* thread-db.c: Replace max_register_size with MAX_REGISTER_SIZE.
	* sh-tdep.c, rom68k-rom.c, remote-sim.c, remote-mips.c: Ditto.
	* remote-e7000.c, monitor.c, mipsv4-nat.c, mips-nat.c: Ditto.
	* m68klinux-nat.c, lynx-nat.c, irix4-nat.c: Ditto.
	* hpux-thread.c, hppah-nat.c, hppab-nat.c, hppa-tdep.c: Ditto.
	* dve3900-rom.c, hppa-tdep.c: Ditto.

2003-05-08  David Carlton  <carlton@math.stanford.edu>

	* valops.c (push_word): Fix typo.

2003-05-08  Andrew Cagney  <cagney@redhat.com>

	* gdbarch.sh: Delete references to MAX_REGISTER_RAW_SIZE.
	* gdbarch.h: Re-generate.
	* defs.h (MAX_REGISTER_RAW_SIZE): Delete macro.
	(legacy_max_register_raw_size): Delete declaration.
	* regcache.c (legacy_max_register_raw_size): Delete function.
	* valops.c: Replace MAX_REGISTER_RAW_SIZE with MAX_REGISTER_SIZE.
	* target.c, stack.c, sparc-tdep.c, sh-tdep.c: Ditto.
	* rs6000-tdep.c, rs6000-nat.c, remote.c, remote-sim.c: Ditto.
	* remote-rdp.c, remote-array.c, regcache.c: Ditto.
	* ppc-linux-nat.c, monitor.c, mn10300-tdep.c: Ditto.
	* mips-tdep.c, mips-linux-tdep.c, m68klinux-nat.c: Ditto.
	* infptrace.c, ia64-tdep.c, i386-tdep.c, frame.c: Ditto.
	* findvar.c, dwarf2cfi.c: Ditto.

2003-05-08  Andrew Cagney  <cagney@redhat.com>

	* mips-tdep.c (read_signed_register): New function, moved to here
	from "regcache.c".
	(read_signed_register_pid): Ditto.